--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -84,8 +84,8 @@ body.menu-open nav a.switch .close-icon { display: block; }
 .menu > a:last-of-type { margin-right: 0; }
 .menu > a.clicked:last-of-type { color: rgba(33, 33, 33, 1); }
 .menu > a.active::after { opacity: 1; background-color: rgba(66, 57, 109, .25); transform: translateY(0px) }
-.menu > a.link::after { height: 3px; background-color: rgba(33, 33, 33, .25); }
-.menu > a.link:hover::after, .menu > a.link:focus::after { rgba(66, 57, 109, 1); }
+.menu > a.link::after { top: calc(100% - 3px); height: 3px; background-color: rgba(33, 33, 33, .25); }
+.menu > a.link:hover::after, .menu > a.link:focus::after { background-color: rgba(66, 57, 109, 1); }
 
 /* Submenu */
 
@@ -111,7 +111,7 @@ body.menu-open nav a.switch .close-icon { display: block; }
 /* Links */
 
 a, a:visited { position: relative; text-decoration: none; outline: none; }
-a.link::after { position: absolute; top: calc(100% - 3px); left: 0; width: 100%; height: 3px; box-sizing: border-box; background-color: rgba(66, 57, 109, 1); content: ''; opacity: 0; transition: opacity 0.3s, background-color .3s, transform 0.3s; transform: translateY(-4px);
+a.link::after { position: absolute; top: calc(100% - 1px); left: 0; width: 100%; height: 1px; box-sizing: border-box; background-color: rgba(33, 33, 33, 1); content: ''; opacity: 0; transition: opacity 0.3s, background-color .3s, transform 0.3s; transform: translateY(-4px);
 }
 a.link:hover::after, a.link:focus::after { opacity: 1; background-color: rgba(66, 57, 109, 1); transform: translateY(0px); }
 
@@ -127,7 +127,7 @@ header > .container, section > .container { margin: 4% auto; }
 
 /* Header */
 
-header { display: inline-block; width: 100%; min-height: auto; background-image: url('/assets/images/interface/bg-header.jpg'); background-position: center top; background-size: cover; }
+header { display: inline-block; width: 100%; min-height: auto; background-color: rgba(33, 33, 33, .15); }
 header a { display: inline; }
 header > .container > h1, header > .container h1 { display: block; margin: 3% 0; font-size: 48px; text-align: center; text-shadow: -3px 3px rgba(33, 33, 33, .25); letter-spacing: -.015em; }
 header .container { position: relative; height: auto; transition: left 1s ease; }
@@ -135,7 +135,7 @@ header p { display: block; font-size: 1.2em; line-height: 150%; }
 header button, header .button { font-size: 20px; background-color: transparent; border-width: 4px; }
 header button:hover, header .button:hover { text-shadow: -3px 3px rgba(33, 33, 33, .25); }
 header button:active, header .button:active { text-shadow: 0px 0px rgba(33, 33, 33, 0); }
-header.blank { display: block; height: 200px; background-image: url('/assets/images/interface/bg-grid.png'); background-size: auto; }
+header.blank { display: block; height: 200px; }
 
 /* Sections */
 
@@ -183,11 +183,11 @@ section.showcase button.bottom, section.showcase .button.bottom { margin-bottom:
 
 /* Section: Design Detail */
 
-section#design-detail > .container { position: relative; top: -200px; margin: 4% auto; margin-top: 50px; }
+section#design-detail > .container { position: relative; margin: 4% auto; margin-top: -150px; }
 section#design-detail > .container > div { position: relative; }
-section#design-detail > .container > div.display { float: left; width: 42%; margin-bottom: -200px; border-style: solid; border-width: 0px 2px; -moz-border-image: url(/assets/images/interface/border-image.png) 27 stretch; -webkit-border-image: url(/assets/images/interface/border-image.png) 27 stretch; -o-border-image: url(/assets/images/interface/border-image.png) 27 stretch; border-image: url(/assets/images/interface/border-image.png) 27 fill; }
+section#design-detail > .container > div.display { float: left; width: 42.5%; border-style: solid; border-width: 0px 2px; -moz-border-image: url(/assets/images/interface/border-image.png) 27 stretch; -webkit-border-image: url(/assets/images/interface/border-image.png) 27 stretch; -o-border-image: url(/assets/images/interface/border-image.png) 27 stretch; border-image: url(/assets/images/interface/border-image.png) 27 fill; }
 section#design-detail > .container > div.display > img { display:none; box-sizing: border-box; width: 100%; padding: 2.5%; background-color: rgba(255, 255, 255, 1); border-top: 1px solid rgba(0, 0, 0, .15); }
-section#design-detail > .container > div.information { float: right; width: 55%; height: 150px; margin-left: 3%; }
+section#design-detail > .container > div.information { display: table; float: right; width: 55%; margin-left: 2.5%; }
 section#design-detail > .container > div.information .head { display: inline-block; position: relative; width: 100%; height: 150px; }
 section#design-detail > .container > div.information .head > h3 { margin-top: 1%; font-size: 2.4em; line-height: 75%; text-transform: uppercase; }
 section#design-detail > .container > div.information .head > h3 + p { margin: 0; margin-top: 2%; line-height: 75%; }
@@ -280,8 +280,8 @@ section.action .container > .bulb { height: 80px; margin: -10px 0; padding: 10px
 
 section.service .container .item { text-align: center; }
 section.service .help.container { display: table; border: 3px solid #daf8fe; background-color: #f7feff; background-image: url(/assets/images/interface/bg-pattern_color.png); }
-section.service .help.container .item { display: table; height: 100px; margin: 0; }
-section.service .help.container .item > * { display: table-cell; margin: 0; vertical-align: middle; }
+section.service .help.container .item { margin-top: 4%; margin-bottom: 4%; }
+section.service .help.container .item > * { display: inline-block; line-height: 1em; margin: 0; }
 section.service .information.container .item { font-size: .85em; }
 section.service .information.container .item h3 { margin-bottom: 5%; font-size: 1em; }
 section.service .item img.icon { width: auto; height: auto; max-width: 64px; max-height: 40px; }
@@ -412,6 +412,8 @@ button.dropdown a:first-child { height: 54px; line-height: 54px; background-imag
 button.dropdown a:first-child::before { font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; }
 button.dropdown.open a:first-child { background-image: url(/assets/images/interface/arrow-up.png); }
 button.dropdown input { display: none; }
+
+.dropdown-wrapper { height: 60px; }
 
 /* Data Lists */
 
@@ -586,9 +588,13 @@ h1, h2, a, a:visited, a.link, a.link:visited, a.link::after { color: rgba(33, 33
 
 /* Page: Home */
 
-body#home header { color: rgba(255, 255, 255, 1); }
+body#home header { color: rgba(255, 255, 255, 1); background-image: url('/assets/images/interface/bg-header.jpg'); background-position: center top; background-size: cover; }
 body#home header > .container { margin: 8% auto; }
 body#home header a { color: rgba(255, 255, 255, 1); }
 body#home header > .container > h1, body#home header > .container h1 { color: rgba(255, 255, 255, 1); }
 body#home header p { color: rgba(255, 255, 255, 1); }
 body#home header button, body#home header .button { color: rgba(255, 255, 255, 1); border-color: rgba(255, 255, 255, 1); }
+
+/* Page: Error */
+
+body#error header img { width: auto; margin-top: 5%; }
