--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -215,8 +215,8 @@ section#design-detail button.dropdown#tshirtGender > a:first-child::before { con
 
 section#design-detail button.submit { float: left; }
 
-section#design-detail .progress { display: block; width: 100%; height: 5px; margin-top: calc(5% + 25px); margin-bottom: 5%; background-color: rgba(33, 33, 33, .15); background-image: url(/assets/images/interface/bg-progress.jpg); background-position: bottom left; background-repeat: no-repeat; }
-section#design-detail .progress > h4 { position: relative; top: -25px; }
+section#design-detail .progress { display: block; width: 100%; height: 10px; margin-top: calc(5% + 25px); margin-bottom: 5%; background-color: rgba(33, 33, 33, .15); background-image: url(/assets/images/interface/bg-progress.jpg); background-position: bottom left; background-repeat: no-repeat; }
+section#design-detail .progress > h4 { position: relative; top: -25px; float: right; }
 
 section#design-detail[data-tab="design"] .design { display: block !important; }
 section#design-detail[data-tab="canvas"] .canvas { display: block !important; }
