--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -301,12 +301,14 @@ section.action .container > .bulb { height: 80px; margin: -10px 0; padding: 10px
 /* Section: Service */
 
 section.service .container .item { text-align: center; }
-section.service .help.container { display: table; border: 3px solid #daf8fe; background-color: #f7feff; background-image: url(/assets/images/interface/bg-pattern_color.png); }
+section.service .help.container { display: table; /*border: 3px solid #daf8fe;*/ background-color: #e9fbff; background-image: url(/assets/images/interface/bg-pattern_color.png); }
 section.service .help.container .item { margin-top: 4%; margin-bottom: 4%; }
 section.service .help.container .item > * { display: inline-block; line-height: 1em; margin: 0; }
+section.service .help.container .stack .item:first-child { letter-spacing: .07rem; }
 section.service .information.container .item { font-size: .85em; }
 section.service .information.container .item h3 { margin-bottom: 5%; font-size: 1em; }
 section.service .item img.icon { width: auto; height: auto; max-width: 64px; max-height: 40px; }
+section.service .item img.ccard { border: 1px solid black; border-radius: 5px; }
 
 /* Footer */
 
