--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -664,3 +664,7 @@ body#error section img { width: auto; margin-top: 5%; }
 #checkout-payment .opc-wrapper {
 	margin: 100px;
 }
+
+.body ul.extra-info li:before {
+  content: '✓';
+}
