--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -30,9 +30,9 @@ header, section, footer, .container { box-sizing: border-box; }
 
 body, a, b, p, h1, h2, h3, h4, h5, h6, span, del, button, .button { text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; }
 h1, h2, h3, h4, h5, h6, b, strong, button, .button { font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; }
-h1 { color: rgba(33, 33, 33, 1); font-family: 'averiaseriflibreregular', serif; line-height: 125%; margin-bottom: 1em; }
-h2 { color: rgba(33, 33, 33, 1); font-family: 'averiaseriflibreregular', serif; line-height: 135%; }
-h3 { color: rgba(33, 33, 33, 1); line-height: 150%; }
+h1 { color: rgba(33, 33, 33, 1); font-family: 'averiaseriflibreregular', serif; font-size: 2em; line-height: 125%; }
+h2 { color: rgba(33, 33, 33, 1); font-family: 'averiaseriflibreregular', serif; font-size: 1.5em; line-height: 135%; }
+h3 { color: rgba(33, 33, 33, 1); font-size: 1em; line-height: 150%; }
 p { line-height: 135%; margin-bottom: 1em; }
 h1 + p { margin-top: .75em; }
 h2 + p { margin-top: .65em; }
@@ -82,10 +82,11 @@ body.menu-open nav a.switch .close-icon { display: block; }
 /* Identity */
 
 .identity { display: block !important; float: left; width: auto; line-height: 100px; }
+.identity img { height: 44px; }
 
 /* Menu */
 
-.menu { display: block; position: relative; height: auto; margin: 0 auto; padding: 0; text-align: right !important; }
+.menu { display: block; position: relative; float: right; width: 75%; height: auto; margin: 0 auto; padding: 0; text-align: right !important; }
 .menu > a { display: inline-block; position: relative; height: 100px; margin-right: 3%; color: rgba(33, 33, 33, 1); cursor: pointer; font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; font-size: 18px; line-height: 100px; text-decoration: none; box-sizing: border-box; }
 .menu > a:last-of-type { margin-right: 0; }
 .menu > a.clicked:last-of-type { color: rgba(33, 33, 33, 1); }
@@ -465,9 +466,10 @@ button.dropdown { display: block; box-sizing: border-box; position: relative; to
 button.dropdown.open { z-index: 2; height: auto; box-shadow: 0 2px 5px rgba(33, 33, 33, .05), 0 2px 5px rgba(33, 33, 33, 0.1); }
 button.dropdown a { display: block; width: 100%; height: 50px; margin: 0 auto; padding: 0 5%; color: rgba(33, 33, 33, 1); font-family: 'robotolight', sans-serif; text-align: left; text-transform: none; line-height: 50px; box-sizing: border-box; background-color: rgba(255, 255, 255, 1); transition: background-color .25s ease; }
 button.dropdown a:hover { background-color: rgba(0, 0, 0, .05); }
-button.dropdown a:first-child { height: 54px; line-height: 54px; background-image: url(/assets/images/interface/arrow-down.png); background-repeat: no-repeat; background-position: right center; background-size: contain; }
-button.dropdown a:first-child::before { font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; }
-button.dropdown.open a:first-child { background-image: url(/assets/images/interface/arrow-up.png); }
+button.dropdown a:first-of-type { height: 54px; line-height: 54px; background-image: url(/assets/images/interface/arrow-down.png); background-repeat: no-repeat; background-position: right center; background-size: contain; }
+button.dropdown a:first-of-type::before { font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; }
+button.dropdown.open a:first-of-type { background-image: url(/assets/images/interface/arrow-up.png); }
+button.dropdown a:last-of-type { background: none !important; }
 button.dropdown input { display: none; }
 
 .dropdown-wrapper { height: 60px; }
@@ -689,7 +691,9 @@ body#checkout.payment section > .container > .process .segment .panel-body .form
 
 /* Page: Error */
 
-body#error section img { width: auto; margin-top: 5%; }
+body#error section:first-of-type .container { text-align: center; }
+body#error section:first-of-type img { width: auto; max-width: 320px; margin-bottom: 2.5%; }
+body#error section:first-of-type a { font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; }
 
 #canvas-addtocart-button.disabled, #tshirt-addtocart-button.disabled {
 	opacity: 0.4;
