dont show cart if it's empty + misc changes

--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -849,3 +849,7 @@ table, th, td {
     background-repeat: repeat;
     background-color: transparent;
 }
+
+.dnone {
+	display: none !important;
+}
