--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -259,7 +259,6 @@ section.presentation button.submit { float: left; }
 section.presentation .progress { display: block; width: 100%; height: 10px; margin-top: calc(5% + 25px); margin-bottom: 5%; background-color: rgba(33, 33, 33, .15); background-image: url(/assets/images/interface/bg-progress2.png); background-position: bottom left; background-repeat: no-repeat; }
 section.presentation .progress > h4 { position: relative; top: -25px; float: right; }
 
-
 section.presentation[data-tab="about"] .about { display: block !important; }
 section.presentation[data-tab="design"] .design { display: block !important; }
 section.presentation[data-tab="canvas"] .canvas { display: block !important; }
@@ -625,6 +624,11 @@ h1, h2, a, a:visited, a.link, a.link:visited, a.link::after { color: rgba(33, 33
     section.service .information.container div:last-child { width: 100%; margin-top: 5%; }
     section.service .help.container div:first-child { width: 100%; margin-bottom: 5%; }
     section.service .help.container div:last-child { margin-left: 2%; }
+    
+    section.presentation > .container > div { float: none !important; width: 100% !important; }
+    /*section.presentation > .container > div.display { float: left; width: 42.5%; border-style: solid; border-width: 0px 2px; -moz-border-image: url(/assets/images/interface/border-image.png) 27 stretch; -webkit-border-image: url(/assets/images/interface/border-image.png) 27 stretch; -o-border-image: url(/assets/images/interface/border-image.png) 27 stretch; border-image: url(/assets/images/interface/border-image.png) 27 fill; }
+    section.presentation > .container > div.display > img { display: none; box-sizing: border-box; width: 100%; padding: 2.5%; background-color: rgba(255, 255, 255, 1); border-top: 1px solid rgba(0, 0, 0, .15); }
+    section.presentation > .container > div.information { display: table; float: right; width: 55%; margin-left: 2.5%; }*/
     
     .promo .container { display: grid; }
     
