--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -239,7 +239,7 @@ section.display > .container > .information .tags > a { position: relative; padd
 section.display > .container > .information .tags > a:hover { top: -2px; }
 section.display > .container > .information h3 { line-height: 67%; }
 section.display > .container > .information p { width: 100%; margin-bottom: 1%; }
-section.display > .container > .information .price { position: absolute; text-align: right; top: 0; right: 0; font-size: 2em; }
+section.display > .container > .information .price { display: inline-block; position: absolute; text-align: right; top: 0; right: 0; font-size: 2em; }
 section.display > .container > .information .price .price-text { font-family: "robotoblack", "Roboto Black", "Roboto", sans-serif; text-transform: uppercase; letter-spacing: -.05em; }
 section.display > .container > .information .price .incl-tax { font-size: 14px; font-weight: lighter; color: gray; }
 section.display > .container > .information button.dropdown { margin-top: 2%; }
@@ -256,17 +256,19 @@ section.display button.dropdown#tshirtGender > a:first-child::before { content: 
 
 section.display button.submit { float: left; }
 
-section.display .progress { display: block; width: 100%; height: 10px; margin-top: calc(5% + 25px); margin-bottom: 5%; background-color: rgba(33, 33, 33, .15); background-image: url(/assets/images/interface/bg-progress2.png); background-position: bottom left; background-repeat: no-repeat; }
-section.display .progress > h4 { position: relative; top: -25px; float: right; }
+section.display .progress { width: 100%; margin: 5% 0; }
+section.display .progress > div { display: block; width: 100%; height: 10px; margin: 1% 0; background-color: rgba(33, 33, 33, .15); background-image: url(/assets/images/interface/bg-progress2.png); background-position: bottom left; background-repeat: no-repeat; }
+section.display .progress > b { display: block; width: 100%; }
+section.display .progress > b:last-of-type { text-align: right; }
 
 section.display[data-tab="about"] .about { display: block !important; }
 section.display[data-tab="design"] .design { display: block !important; }
 section.display[data-tab="canvas"] .canvas { display: block !important; }
-section.display[data-tab="canvas"] .canvas p { width: 75% !important; margin-bottom: 1%; }
+section.display[data-tab="canvas"] .canvas p { width: 75%; margin-bottom: 1%; }
 section.display[data-tab="tshirt"] .tshirt { display: block !important; }
-section.display[data-tab="tshirt"] .tshirt p { width: 75% !important; margin-bottom: 1%; }
+section.display[data-tab="tshirt"] .tshirt p { width: 75%; margin-bottom: 1%; }
 section.display[data-tab="mug"] .mug { display: block !important; }
-section.display[data-tab="mug"] .mug p { width: 75% !important; margin-bottom: 1%; }
+section.display[data-tab="mug"] .mug p { width: 75%; margin-bottom: 1%; }
 
 /* Section: Checkout > Cart */
 
@@ -560,6 +562,8 @@ h1, h2, a, a:visited, a.link, a.link:visited, a.link::after { color: rgba(33, 33
     section.display > .container > .title { text-align: center; }
     section.display > .container > .visual { width: 300px; height: 300px; margin: 0 auto; }
     section.display > .container > .tabbing { width: auto; margin: 25px auto 0 auto; }
+    section.display > .container .information > div > * { width: 100%; }
+    section.display > .container .information > div > .price { position: relative; margin-top: 5%; }
     
     .promo .container { display: grid; }
     
