--- a/public/assets/styles/generic.css
+++ b/public/assets/styles/generic.css
@@ -583,7 +583,7 @@ h1, h2, a, a:visited, a.link, a.link:visited, a.link::after { color: rgba(33, 33
     footer .container > *:first-child { margin-bottom: 2.5%; }
     
     button, .button { margin-top: 6%; line-height: 40px; border-width: 2px; }
-    button:hover, .button:hover { top: -1px; left: 1px; box-shadow: -2px 2px 0px 0px rgba(33, 33, 33, .25); }
+    button:hover, .button:hover { top: -1px; left: 1px; }
     button:active, .button:active { top: 1px; left: -1px; box-shadow: none; }
     
 }
